fixed the random visible bars#

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ h1 {
 }
 
 footer {
+  padding: 2% 0;
   color: var(--primary-color);
   position: fixed;
   bottom: 0;
@@ -64,8 +65,8 @@ footer {
 }
 
 .info-update {
-  width: 110px;
- 
+  width: 180px;
+ font-weight: bold;
 }  
 
 
@@ -168,10 +169,12 @@ width: 100%}
 
 .span-ray3 {
   animation: myAnim-ray3 1.8s ease forwards;
+  visibility: hidden;
 }
 
 @keyframes myAnim-ray3 {
   0% {
+    visibility: visible;
     transform: scaleY(0) rotate(-65deg);
     transform-origin: 5% 110%;
   }
@@ -188,15 +191,18 @@ width: 100%}
     opacity: 0.75;
 
   }
+
 }
 
 .span-ray4 {
+  visibility: hidden;
   animation: myAnim-ray4 1.8s ease forwards;
 position: relative;
 right: 10px}
 
 @keyframes myAnim-ray4 {
   0% {
+    visibility: visible;
     transform: scaleY(0) rotate(-15deg);
     transform-origin: 0% 110%;
   }
@@ -204,7 +210,7 @@ right: 10px}
   transform: scaleY(2) scaleX(1.1) rotate(-55deg);
   background-color: white;
 }
-  99% {
+100% {
     transform: scaleY(2) scaleX(1.1) rotate(-10deg) translateX(250px);
     transform-origin: 0% 70%;
     -webkit-box-shadow: -2px -50px 50px 50px #FFFFFF; 
@@ -213,9 +219,18 @@ right: 10px}
     opacity: 0.75;
 
   }
-  100% {
-visibility: hidden;
-  }
+
+}
+
+.span-ray {
+  visibility: hidden;
+z-index: 10;
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    grid-column: 1 /span 3;
+    grid-row: 1 /span 6;
+  width: 120%;
 }
 
 .span-ray5 {
@@ -228,14 +243,21 @@ bottom: -30px}
 
 @keyframes myAnim-ray5 {
   0% { visibility: visible; 
+    opacity: 0.1;
      transform: scaleY(3) scaleX(1.1) rotate(90deg) translateX(100px);
     transform-origin: 0% 100%;
   }
 5% {
+  opacity: 0.5;
+
   transform: scaleY(3) scaleX(1.1) rotate(40deg);
   background-color: white;
 }
-  97% {
+
+10% {
+  opacity: 1;
+}
+  100% {
     transform: scaleY(3) rotate(-45deg);
     transform-origin: 0% 110%;
 
@@ -245,9 +267,7 @@ bottom: -30px}
     opacity: 0.75;
 
   }
-  100% {
-visibility: hidden;
-  }
+  
 }
 
 .span-rays {
@@ -255,16 +275,6 @@ visibility: hidden;
 padding: 15px ;}
 
 
-.span-ray {
-  visibility: hidden;
-z-index: 10;
-    display: flex;
-    justify-content: space-evenly;
-    position: relative;
-    grid-column: 1 /span 3;
-    grid-row: 1 /span 6;
-  width: 120%;
-}
 
   @keyframes rays {
     0% {
